<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/classeMago">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginStart="35dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title_mago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medieval_sharp_regular"
            android:text="@string/titulo_mago"
            android:textAlignment="center"
            android:textColor="@color/texto_mago"
            android:textSize="27dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medieval_sharp_regular"
            android:padding="17dp"
            android:text="@string/descricaoMago"
            android:textAlignment="center"
            android:textColor="@color/texto_mago"
            android:textSize="21dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/voltar"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                app:layout_constraintVertical_bias="0.945"
                app:layout_constraintHorizontal_bias="0.13"

                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/quero"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                app:layout_constraintVertical_bias="0.945"
                app:layout_constraintHorizontal_bias="0.13"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>