<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/classeLadino">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/title_clerigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/medieval_sharp_regular"
            android:text="@string/titulo_ladino"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medieval_sharp_regular"
            android:padding="25dp"
            android:text="@string/descricaoLadino"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="21dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/voltar"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintVertical_bias="0.945"
                tools:ignore="MissingConstraints"

                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/quero"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintVertical_bias="0.945"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>