<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/classeGuerreiro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/guerreiroClasse" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginStart="35dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title_guerreiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medieval_sharp_regular"
            android:text="@string/titulo_guerreiro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medieval_sharp_regular"
            android:padding="30dp"
            android:text="@string/descricaoGuerreiro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/voltar"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                app:layout_constraintVertical_bias="0.945"
                app:layout_constraintHorizontal_bias="0.13"

                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/imagebutton_border"
                android:fontFamily="@font/medieval_sharp_regular"
                android:text="@string/quero"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                app:layout_constraintVertical_bias="0.945"
                app:layout_constraintHorizontal_bias="0.13"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/guerreiroClasse" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>