<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/main"
    android:background="@drawable/folha2"
>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar5"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="120dp"
        android:layout_height="105dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar5"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar5"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar5"
        app:srcCompat="@drawable/logo_dice" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_toolbar_background"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guerreiro"
        android:fontFamily="@font/medieval_sharp_regular"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/guerreiro2"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_toolbar_background"
        android:importantForAccessibility="no"
        android:padding="25dp"
        android:paddingBottom="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar7"
        app:srcCompat="@drawable/mago" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/mago"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toTopOf="@+id/imageButton7"
        app:layout_constraintStart_toStartOf="@+id/imageButton7"/>

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_toolbar_background"
        android:importantForAccessibility="no"
        android:padding="25dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@drawable/r" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/ladino"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toTopOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="170dp"
        android:layout_height="85dp"
        android:layout_marginStart="36dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar5"
        app:layout_constraintStart_toEndOf="@+id/Logo"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar5"
        app:srcCompat="@drawable/classes" />


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar7"
        android:layout_width="326dp"
        android:layout_height="62dp"
        android:background="@drawable/folha2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar5"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/clique_na_classe_e_saiba_mais_sobre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar7"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar7"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar7"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar7" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_toolbar_background"
        android:importantForAccessibility="no"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/clerigo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/cl_rigo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="@+id/imageButton9"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/imagebutton_border"
        android:fontFamily="@font/medieval_sharp_regular"
        android:text="@string/voltar"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>